--- a/src/app/pages/poi-page/poi-page.component.css
+++ b/src/app/pages/poi-page/poi-page.component.css
@@ -10,6 +10,14 @@
   color: rgba(255,255, 255, 0.20);
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;  /* Ajustez la hauteur selon vos besoins */
+}
+
+
 .scroll-container {
   scroll-behavior: smooth; /* Défilement fluide */
 }
