--- a/src/app/pages/pois-accounts-backoffice-page/pois-accounts-backoffice-page.component.html
+++ b/src/app/pages/pois-accounts-backoffice-page/pois-accounts-backoffice-page.component.html
@@ -95,7 +95,7 @@
             <p-dropdown
                 [options]="pois"
                 [(ngModel)]="user.poi"
-                placeholder=""
+                placeholder="Sélectionner un POI"
                 optionLabel="name"
                 [style]="{ width: '100%' }"
                 [filter]="true"
