--- a/src/app/container/profil/my-meets/my-meets.component.html
+++ b/src/app/container/profil/my-meets/my-meets.component.html
@@ -13,7 +13,10 @@
 >
     Créer un meet (rencontre)
 </button>
-<div class="flex flex-row flex-wrap gap-20">
+<div *ngIf="loading">
+    <p-progressBar mode="indeterminate" [style]="{ height: '6px', width: '100%' }"></p-progressBar>
+</div>
+<div *ngIf="!loading" class="flex flex-row flex-wrap gap-20">
     <app-meet-card
         *ngFor="let meet of meets"
         [meet]="meet"
