--- a/src/app/container/profil/my-posts/my-posts.component.html
+++ b/src/app/container/profil/my-posts/my-posts.component.html
@@ -14,7 +14,10 @@
 >
     Créer un memories (post)
 </button>
-<div class="flex flex-row flex-wrap gap-20">
+<div *ngIf="loading">
+    <p-progressBar mode="indeterminate" [style]="{ height: '6px', width: '100%' }"></p-progressBar>
+</div>
+<div *ngIf="!loading" class="flex flex-row flex-wrap gap-20">
     <app-post-card
         *ngFor="let post of posts"
         [post]="post"
