--- a/src/app/container/profil/my-quiz/my-quiz.component.html
+++ b/src/app/container/profil/my-quiz/my-quiz.component.html
@@ -13,7 +13,10 @@
 >
     Créer une question
 </button>
-<div class="flex flex-row flex-wrap gap-20">
+<div *ngIf="loading">
+    <p-progressBar mode="indeterminate" [style]="{ height: '6px', width: '100%' }"></p-progressBar>
+</div>
+<div *ngIf="!loading" class="flex flex-row flex-wrap gap-20">
     <app-card-questions-quiz
         *ngFor="let question of questions"
         [question]="question"
