--- a/src/app/container/profil/my-tickets/my-tickets.component.html
+++ b/src/app/container/profil/my-tickets/my-tickets.component.html
@@ -1,4 +1,7 @@
-<div class="flex flex-row flex-wrap gap-20">
+<div *ngIf="loading">
+    <p-progressBar mode="indeterminate" [style]="{ height: '6px', width: '100%' }"></p-progressBar>
+</div>
+<div *ngIf="!loading" class="flex flex-row flex-wrap gap-20">
     <ng-container *ngIf="myTickets && myTickets.length > 0; else noTickets">
         <app-my-ticket-card
             *ngFor="let myticket of myTickets"
