--- a/src/app/pages/ranking-page/ranking-page.component.html
+++ b/src/app/pages/ranking-page/ranking-page.component.html
@@ -98,7 +98,7 @@
             </ng-template>
             <ng-template pTemplate="summary">
                 <div class="flex align-items-center justify-content-between">
-                    Nombre de personnes affiché {{ users ? users.length : 0 }} utilisateurs.
+                    Nombre de personnes affichées {{ users ? users.length : 0 }} utilisateurs.
                 </div>
             </ng-template>
         </p-table>
