--- a/src/app/components/create-post-card/create-post-card.component.html
+++ b/src/app/components/create-post-card/create-post-card.component.html
@@ -5,7 +5,13 @@
             name="photo"
             mode="basic"
             accept="image/*"
-            maxFileSize="1000000"
+            maxFileSize="4000000"
+            invalidFileSizeMessageSummary="Taille de fichier invalide"
+            invalidFileSizeMessageDetail="La taille du fichier doit être inférieure à 4 Mo"
+            invalidFileLimitMessageDetail="Vous ne pouvez pas uploader plus de 1 fichier"
+            invalidFileTypeMessageDetail="Seuls les fichiers de type image sont autorisés"
+            invalidFileLimitMessageSummary="Nombre de fichiers invalide"
+            invalidFileTypeMessageSummary="Type de fichier invalide"
             chooseIcon="pi pi-upload"
             chooseLabel="Ajouter photos"
             (onSelect)="onUpload($event)"
