--- a/src/app/components/create-quest/create-quest.component.html
+++ b/src/app/components/create-quest/create-quest.component.html
@@ -4,9 +4,15 @@
         <p-fileUpload
             #fileUp
             name="photo"
+            invalidFileSizeMessageSummary="Taille de fichier invalide"
+            invalidFileSizeMessageDetail="La taille du fichier doit être inférieure à 4 Mo"
+            invalidFileLimitMessageDetail="Vous ne pouvez pas uploader plus de 1 fichier"
+            invalidFileTypeMessageDetail="Seuls les fichiers de type image sont autorisés"
+            invalidFileLimitMessageSummary="Nombre de fichiers invalide"
+            invalidFileTypeMessageSummary="Type de fichier invalide"
             mode="basic"
             accept="image/*"
-            maxFileSize="1000000"
+            maxFileSize="4000000"
             chooseIcon="pi pi-upload"
             chooseLabel="Ajouter une photo"
             (onSelect)="storeImage($event)"
