fix disbale monument autocomplete in poipage

--- a/src/app/components/create-post-card/create-post-card.component.html
+++ b/src/app/components/create-post-card/create-post-card.component.html
@@ -55,6 +55,8 @@
             optionLabel="name"
             [virtualScroll]="true"
             [virtualScrollItemSize]="38"
+            [placeholder]="inputPoiName"
+            [disabled]="inputPoiId !== undefined || loading"
         />
         <!--        <p-dropdown
             [options]="poi"
