--- a/src/app/pages/poi-page/poi-page.component.html
+++ b/src/app/pages/poi-page/poi-page.component.html
@@ -139,10 +139,10 @@
             class="mt-16"
         >
             <div class="flex flex-row justify-between">
-                <div class="flex flex-row justify-between mb-10">
-                    <h3 class="text-4xl font-bold font-['Urbanist']">
-                        Les meets disponible pour "{{ poi.name }}"
-                    </h3>
+                <h3 class="text-4xl font-bold font-['Urbanist']">
+                    Les meets disponible pour "{{ poi.name }}"
+                </h3>
+                <div class="flex flex-row justify-between items-center gap-4 ml-auto mb-10">
                     <div class="flex flex-row gap-2 ml-16">
                         <button
                             pButton
@@ -152,40 +152,40 @@
                             (click)="openDialogMeet()"
                         ></button>
                     </div>
-                </div>
-                <div class="flex flex-row ml-auto gap-2">
-                    <div
-                        class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
-                        (click)="scrollLeftMeet()"
-                        #leftButtonMeet
-                        [ngClass]="{
-                            'bg-gray-500': isAtLeftEndMeet,
-                            'bg-[var(--primary)]': !isAtLeftEndMeet
-                        }"
-                    >
-                        <img
-                            ngSrc="assets/poi/arrow_scroll.png"
-                            width="12"
-                            height="12"
-                            alt="fleche scroll"
-                            class="rotate-180"
-                        />
-                    </div>
-                    <div
-                        class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
-                        (click)="scrollRightMeet()"
-                        #rightButtonMeet
-                        [ngClass]="{
-                            'bg-gray-500': isAtRightEndMeet,
-                            'bg-[var(--primary)]': !isAtRightEndMeet
-                        }"
-                    >
-                        <img
-                            ngSrc="assets/poi/arrow_scroll.png"
-                            width="12"
-                            height="12"
-                            alt="fleche scroll"
-                        />
+                    <div class="flex flex-row gap-2">
+                        <div
+                            class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
+                            (click)="scrollLeftMeet()"
+                            #leftButtonMeet
+                            [ngClass]="{
+                                'bg-gray-500': isAtLeftEndMeet,
+                                'bg-[var(--primary)]': !isAtLeftEndMeet
+                            }"
+                        >
+                            <img
+                                ngSrc="assets/poi/arrow_scroll.png"
+                                width="12"
+                                height="12"
+                                alt="fleche scroll"
+                                class="rotate-180"
+                            />
+                        </div>
+                        <div
+                            class="rounded-full w-10 h-10 flex justify-center items-center cursor-pointer select-none"
+                            (click)="scrollRightMeet()"
+                            #rightButtonMeet
+                            [ngClass]="{
+                                'bg-gray-500': isAtRightEndMeet,
+                                'bg-[var(--primary)]': !isAtRightEndMeet
+                            }"
+                        >
+                            <img
+                                ngSrc="assets/poi/arrow_scroll.png"
+                                width="12"
+                                height="12"
+                                alt="fleche scroll"
+                            />
+                        </div>
                     </div>
                 </div>
             </div>
@@ -325,6 +325,7 @@
         <app-create-post-card
             [inputPoiId]="poi.id"
             [inputPoiName]="poi.name"
+            (reload)="reloadPosts()"
         ></app-create-post-card>
     </ng-template>
 </p-dialog>
