--- a/src/app/pages/post-page/post-page.component.html
+++ b/src/app/pages/post-page/post-page.component.html
@@ -97,13 +97,13 @@
                 </p-inputGroupAddon>
             </p-inputGroup>
         </div>
-        <div>
+        <!--        <div>
             <span class="font-medium text-900 block mb-2">Inviter à partager</span>
             <div class="flex">
                 <p-chips disabled />
                 <p-button label="Invite" icon="pi pi-users" />
             </div>
-        </div>
+        </div>-->
         <!--        <div>
             <span class="font-medium text-900 block mb-2">Test</span>
             <ul class="list-none p-0 m-0 flex flex-column gap-3">
