repot comments and posts

--- a/src/app/container/comments/comments-section/comments-section.component.html
+++ b/src/app/container/comments/comments-section/comments-section.component.html
@@ -49,6 +49,7 @@
                         [isLiked]="comment.isLiked"
                         [commentId]="comment.id"
                         [isMyComment]="comment.createdById === IdAuthor"
+                        [hasBeenReported]="comment.isReported"
                         (emitter)="loadInitialComments()"
                         class="mb-3"
                     ></app-comment>
