--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -16,6 +16,12 @@
                 <span *ngIf="isMyComment" (click)="deleteComment()" class="deletePost"
                     >Supprimer mon commentaire</span
                 >
+                <span
+                    *ngIf="!isMyComment && !hasBeenReported"
+                    (click)="visibleReportDialog = true"
+                    class="deletePost"
+                    >Signaler le commentaire</span
+                >
                 <i
                     *ngIf="!isMyComment"
                     class="cursor-pointer pi pi-heart{{ isLiked ? '-fill' : '' }}"
@@ -27,3 +33,29 @@
         </div>
     </div>
 </p-panel>
+<p-dialog
+    header="Signaler le commentaire?"
+    [modal]="true"
+    [(visible)]="visibleReportDialog"
+    [style]="{ width: '25rem' }"
+    [ngClass]="'report-comment'"
+>
+    <span class="p-text-secondary block mb-5"
+        >Êtes vous sur de vouloir signaler le commentaire ?</span
+    >
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Non" severity="secondary" (click)="visibleReportDialog = false" />
+        <p-button label="Oui" (click)="reportComment()" />
+    </div>
+    <p-message
+        *ngIf="success"
+        class="self-center mt-6"
+        severity="success"
+        text="Commentaire signalé avec succès, merci pour votre aide !"
+    ></p-message>
+    <p-progressBar
+        mode="indeterminate"
+        *ngIf="loading"
+        [style]="{ height: '6px', width: '100%' }"
+    ></p-progressBar>
+</p-dialog>
