--- a/src/app/pages/post-page/post-page.component.html
+++ b/src/app/pages/post-page/post-page.component.html
@@ -78,6 +78,15 @@
                         label="Partager"
                         class="p-button-text"
                     ></button>
+                    <button
+                        pButton
+                        *ngIf="!isOwner && !post?.isReported"
+                        type="button"
+                        (click)="visibleReportDialog = true"
+                        icon="pi pi-exclamation-triangle"
+                        label="Signaler"
+                        class="p-button-text"
+                    ></button>
                 </div>
             </div>
             <p class="text-gray-600 text-sm">{{ post?.likesCount }} like</p>
@@ -118,3 +127,21 @@
     [postUrl]="post?.image?.url"
     (setShowDialog)="closeComments()"
 ></app-comments-section>
+<p-dialog
+    header="Signaler le post"
+    [modal]="true"
+    [(visible)]="visibleReportDialog"
+    [style]="{ width: '25rem' }"
+    [ngClass]="'report-post'"
+>
+    <span class="p-text-secondary block mb-5">Êtes vous sur de vouloir signaler le post ?</span>
+    <div class="flex justify-content-end gap-2">
+        <p-button label="Non" severity="secondary" (click)="visibleReportDialog = false" />
+        <p-button label="Oui" (click)="reportPost()" />
+    </div>
+    <p-progressBar
+        mode="indeterminate"
+        *ngIf="loading"
+        [style]="{ height: '6px', width: '100%' }"
+    ></p-progressBar>
+</p-dialog>
