fix dropdown autocomplete meet page

--- a/src/app/components/create-meet-card/create-meet-card.component.html
+++ b/src/app/components/create-meet-card/create-meet-card.component.html
@@ -59,6 +59,8 @@
                     [dropdown]="true"
                     (completeMethod)="searchPoi($event)"
                     optionLabel="name"
+                    [placeholder]="inputPoiName"
+                    [disabled]="inputPoiId !== undefined || loading"
                     [virtualScroll]="true"
                     [virtualScrollItemSize]="38"
                 />
@@ -92,6 +94,8 @@
                 (completeMethod)="searchPoi($event)"
                 optionLabel="name"
                 [virtualScroll]="true"
+                [placeholder]="inputPoiName"
+                [disabled]="inputPoiId !== undefined || loading"
                 [virtualScrollItemSize]="38"
             />
         </div>
